src/plugins/ambient-mode/style.css
#song-video canvas.html5-blur-canvas,
#song-image .html5-blur-image {
  filter: blur(var(--blur, 100px));
  opacity: var(--opacity, 1);
  width: var(--width, 100%);
  height: var(--height, 100%);

  pointer-events: none;
}

#song-video canvas.html5-blur-canvas:not(.fullscreen),
#song-image .html5-blur-image {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

#song-video canvas.html5-blur-canvas.fullscreen {
  position: fixed;
  left: 0;
  top: 0;

  width: 100%;
  height: 100%;
}

#song-video .html5-video-container > video {
  top: 0 !important;
}

#player:not(.video-mode) {
  margin: 0 auto !important;
}

